# daccord

./: .gitignore  .rustfmt.toml  CHANGELOG  Cargo.toml  Makefile  README.rst
src/coolify/: Cargo.toml
src/coolify/src/: main.rs
src/coolify/tests/: integration_test.rs
src/domainify/: Cargo.toml
src/domainify/src/: main.rs
src/domainify/tests/: integration_test.rs
src/sprinkle/: Cargo.toml
src/sprinkle/src/: main.rs
src/sprinkle/tests/: integration_test.rs
src/synonyms/: Cargo.toml
src/synonyms/src/: main.rs
src/thesaurus/: Cargo.toml
src/thesaurus/src/: lib.rs  thesaurus.rs
